--- a/src/bcrhp/bcrhp/media/css/resource_details.css
+++ b/src/bcrhp/bcrhp/media/css/resource_details.css
@@ -10,3 +10,11 @@ button.info-button {
     border: none;
     cursor: help;
 }
+
+.external-urls a {
+    color: #315B7D;
+}
+
+.external-urls a:hover {
+    text-decoration: underline;
+}
