--- a/src/bcfms/bcfms/templates/views/components/cards/default.htm
+++ b/src/bcfms/bcfms/templates/views/components/cards/default.htm
@@ -234,7 +234,7 @@
         </a>
         <!-- /ko-->
         <!-- ko if: provisionalTileViewModel.selectedProvisionalEdit().isfullyprovisional -->
-        <span data-bind="text: $root.translations.newProvisionalContribution"></span>
+            <span data-bind="text: $root.translations.newProvisionalContribution"></span>
         <!-- /ko-->
     </div>
     <!-- /ko-->
@@ -258,9 +258,9 @@
                     <span data-bind="text: $root.translations.provisionalEdits"></span>
                 </div>
                 <div
-                        class="btn btn-shim btn-danger btn-labeled btn-xs fa fa-trash new-provisional-edits-delete-all"
-                        style="padding: 3px;"
-                        data-bind="click: function(){provisionalTileViewModel.deleteAllProvisionalEdits()}"
+                    class="btn btn-shim btn-danger btn-labeled btn-xs fa fa-trash new-provisional-edits-delete-all"
+                    style="padding: 3px;"
+                    data-bind="click: function(){provisionalTileViewModel.deleteAllProvisionalEdits()}"
                 >
                     <span data-bind="text: $root.translations.deleteAllEdits"></span>
                 </div>
@@ -329,8 +329,7 @@
                             expanded: self.expanded,
                             graph: self.form.graph,
                             type: "resource-editor",
-                            disabled: !self.card.isWritable && !self.preview,
-                            bc_card: card
+                            disabled: !self.card.isWritable && !self.preview
                         }
                     }, css:{ "active": widget.selected, "hover": widget.hovered, "widget-preview": self.preview
                 }, click: function(data, e) { if (!widget.selected() && self.preview) {widget.selected(true);}
@@ -374,8 +373,7 @@
                                         label: self.form.widgetLookup[card.widgets()[0].widget_id()].label,
                                         value: tile.data[card.widgets()[0].node_id()],
                                         type: 'resource-editor',
-                                        state: 'display_value',
-                                        bc_card: card
+                                        state: 'display_value'
                                     }
                                 }"></div>
                                 <!-- /ko -->
@@ -394,25 +392,25 @@
             <div class="install-buttons">
                 <!-- ko if: tile.tileid && self.deleteTile -->
                 <button
-                        class="btn btn-shim btn-labeled btn-lg fa fa-trash"
-                        data-bind="click: self.deleteTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-warning': card.isWritable }"
+                    class="btn btn-shim btn-labeled btn-lg fa fa-trash"
+                    data-bind="click: self.deleteTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-warning': card.isWritable }"
                 >
                     <span data-bind="text: $root.translations.deleteThisRecord"></span>
                 </button>
                 <!-- /ko -->
 
                 <!-- ko if: tile.dirty() -->
-                <!-- ko if: provisionalTileViewModel && !provisionalTileViewModel.tileIsFullyProvisional() && card.isWritable -->
-                <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-times" data-bind="click: tile.reset">
-                    <span data-bind="text: $root.translations.cancelEdit"></span>
-                </button>
-                <!-- /ko -->
+                    <!-- ko if: provisionalTileViewModel && !provisionalTileViewModel.tileIsFullyProvisional() && card.isWritable -->
+                    <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-times" data-bind="click: tile.reset">
+                        <span data-bind="text: $root.translations.cancelEdit"></span>
+                    </button>
+                    <!-- /ko -->
 
-                <!-- ko if: tile.tileid -->
-                <button class="btn btn-shim btn-labeled btn-lg fa fa-plus" data-bind="click: self.saveTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-mint': card.isWritable }">
-                    <span data-bind="text: $root.translations.saveEdit"></span>
-                </button>
-                <!-- /ko -->
+                    <!-- ko if: tile.tileid -->
+                    <button class="btn btn-shim btn-labeled btn-lg fa fa-plus" data-bind="click: self.saveTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-mint': card.isWritable }">
+                        <span data-bind="text: $root.translations.saveEdit"></span>
+                    </button>
+                    <!-- /ko -->
                 <!-- /ko -->
 
                 <!-- ko if: !tile.tileid && !showChildCards() -->
