1034 - Fix data and logic for file URLs dev - Centre image in carousel

--- a/src/bcrhp/bcrhp/media/css/resource_details.css
+++ b/src/bcrhp/bcrhp/media/css/resource_details.css
@@ -3,6 +3,11 @@
     margin-top: 0;
 }
 
+.details-carousel > img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 button.info-button {
     color: #315B7D;
     padding-left: 3px;
