629 - Add search video and remove coming soon overlay

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -256,17 +256,14 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                     </a>
                                 </div>
                                 <div class="app-info-manual-item" style="grid-column: 2; grid-row: 1;">
-                                    <a href="">
+                                    <a href="https://youtu.be/kn4lAEU2NNc" target="basic_search_video">
                                         <img alt="Basic Search Video Guide" src="{% webpack_static 'img/front/manual-with-text-2.jpg' %}" />
                                     </a>
                                 </div>
                                 <div class="app-info-manual-item" style="grid-column: 3; grid-row: 1;">
-                                    <a href="">
+                                    <a href="https://youtu.be/qkpAsaczhn8" target="advanced_search_video">
                                         <img alt="Advanced Search Video Guide" src="{% webpack_static 'img/front/manual-with-text-3.jpg' %}" />
                                     </a>
-                                </div>
-                                <div style="grid-column-start: 2; grid-column-end: 4; grid-row: 1; z-index: 1; min-height: 50px; color: white; background: rgba(0,0,0,.5); height: 100%; align-content: center; text-align: center; font-size: 1.5rem;">
-                                    <div style="transform: rotate(-15deg)">Coming soon</div>
                                 </div>
                             </div>
                     </div>
