1050 - Get tileserv port from config

--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -85,3 +85,4 @@ OAUTH_CLIENT_SECRET={{ oauth_client_secret }}
 
 #Local Tileserver config
 TILESERVER_OUTBOUND_PROXY={{ proxy_env.https_proxy }}
+TILESERVER_LOCAL_URL=http://localhost:{{ tileserv_http_listen_port }}/
