1051 - Set instance-specific celery worker name

--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -52,6 +52,7 @@ PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/{{ url_context_root }}
 
 # Celery
 CELERY_BROKER_URL={{ celery_broker_url }}
+CELERY_WORKER_NAME=${ARCHES_PROJECT}_${APP_ENV}
 
 #cantaloupe
 # CANTALOUPE_ENDPOINT_ADMIN_ENABLED=true
