--- a/src/bcrhp/dot.env.j2
+++ b/src/bcrhp/dot.env.j2
@@ -58,6 +58,10 @@ PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/{{ url_context_root }}
 # RABBITMQ_USER=guest
 # RABBITMQ_PASS=guest
 
+# Celery
+CELERY_BROKER_URL={{ celery_broker_url }}
+CELERY_WORKER_NAME=${ARCHES_PROJECT}_${APP_ENV}
+
 #cantaloupe
 # CANTALOUPE_ENDPOINT_ADMIN_ENABLED=true
 # CANTALOUPE_ENDPOINT_ADMIN_USERNAME=admin
