--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
@@ -222,7 +222,7 @@
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: flex; flex-flow: column; width: 100%; justify-content: space-between;">
             <!-- ko let: {widget: getWidgetForAlias('designation_or_protection_start_date')}-->
-            <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'reference_number']), as: 'values' } -->
+            <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'designation_or_protection_end_date', 'reference_number']), as: 'values' } -->
             <dl class="dl-horizontal">
                 <div class="details-authority-section">
                     <div>
@@ -255,11 +255,20 @@
                     <div>
                         <dt>Recognition Date</dt>
                         <dd>
-                            <div data-bind="component: { name: 'datepicker-widget',
+                            <div style="display: inline-block" data-bind="component: { name: 'datepicker-widget',
                                             params: { value: values['designation_or_protection_start_date'],
                                             node: widget.node,
                                             state: 'display_value' }
                                             }"></div>
+                            <div style="display: inline-block" data-bind="visible: !!ko.unwrap(values['designation_or_protection_end_date'])">
+                                <div style="display: inline-block">-</div>
+                                <div style="display: inline-block" data-bind="component: { name: 'datepicker-widget',
+                                                params: { value: values['designation_or_protection_end_date'],
+                                                node: widget.node,
+                                                state: 'display_value' }
+                                                }"></div>
+
+                            </div>
                         </dd>
                     </div>
                     <div>
