1041 - Check for empty values in image and address attributes

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -53,6 +53,10 @@
     margin-bottom: 1.5rem;
 }
 
+.street_address, .city, .province, .address_separator {
+    font-size: 1.4rem;
+}
+
 /* Image slider caption information */
 .photo-info {
     max-width: 500px;
