--- a/src/bcrhp/bcrhp/templates/views/components/widgets/civic-address-widget.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/widgets/civic-address-widget.htm
@@ -2,26 +2,26 @@
 {% load i18n %}
 
 {% block display_value %}
-<div>
+<div data-bind="visible: textHasValue(tile().data[streetAddress().attributes.node_id()]) || textHasValue(tile().data[city().attributes.node_id()]) || !!ko.unwrap(tile().data[province().attributes.node_id()])">
     <dt>Address</dt>
     <dd>
         <!-- ko let: {addressPart: streetAddress()} -->
-    <span data-bind="component: {
-                                            name: addressPart.widgetLookup[addressPart.widget_id()].name,
-                                            params: {
-                                                tile: tile(),
-                                                node: addressPart.node,
-                                                config: addressPart.config,
-                                                label: addressPart.label(),
-                                                value: tile().data[addressPart.attributes.node_id()],
-                                                state: 'display_value',
-                                            }
-                                        }, click: function(){console.log(card);}">
-    </span>
+        <span style="font-size: 0;" data-bind="component: {
+                                                name: addressPart.widgetLookup[addressPart.widget_id()].name,
+                                                params: {
+                                                    tile: tile(),
+                                                    node: addressPart.node,
+                                                    config: addressPart.config,
+                                                    label: addressPart.label(),
+                                                    value: tile().data[addressPart.attributes.node_id()],
+                                                    state: 'display_value',
+                                                }
+                                            }, click: function(){console.log(card);}">
+        </span>
+        <span class="address_separator" data-bind="visible: (textHasValue(tile().data[city().attributes.node_id()]) && textHasValue(tile().data[streetAddress().attributes.node_id()]))">, </span>
         <!-- /ko -->
         <!-- ko let: {addressPart: city()} -->
-        <span data-bind="visible: (!!ko.unwrap(tile().data[city().attributes.node_id()]) && !!ko.unwrap(tile().data[province().attributes.node_id()]))">,</span>
-        <span data-bind="component: {
+        <span style="font-size: 0;" data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
                                             params: {
                                                 tile: tile(),
@@ -32,26 +32,27 @@
                                                 state: 'display_value',
                                             }
                                         }, click: function(){console.log(card);}"></span>
+        <span class="address_separator" data-bind="visible: (!!ko.unwrap(tile().data[province().attributes.node_id()]) && (textHasValue(tile().data[city().attributes.node_id()]) || textHasValue(tile().data[streetAddress().attributes.node_id()])) )">, </span>
         <!-- /ko -->
         <!-- ko let: {addressPart: province()} -->
-    <span data-bind="component: {
-                                            name: addressPart.widgetLookup[addressPart.widget_id()].name,
-                                            params: {
-                                                tile: tile(),
-                                                node: addressPart.node,
-                                                config: addressPart.config,
-                                                label: addressPart.label(),
-                                                value: tile().data[addressPart.attributes.node_id()],
-                                                state: 'display_value',
-                                            }
-                                        }, click: function(){console.log(card);}">
-    </span>
-    <!-- /ko -->
+        <span data-bind="component: {
+                                                name: addressPart.widgetLookup[addressPart.widget_id()].name,
+                                                params: {
+                                                    tile: tile(),
+                                                    node: addressPart.node,
+                                                    config: addressPart.config,
+                                                    label: addressPart.label(),
+                                                    value: tile().data[addressPart.attributes.node_id()],
+                                                    state: 'display_value',
+                                                }
+                                            }, click: function(){console.log(card);}">
+        </span>
+        <!-- /ko -->
     </dd>
 </div>
-<div>
+<!-- ko let: {addressPart: locality()} -->
+<div data-bind="visible: textHasValue(tile().data[addressPart.attributes.node_id()])">
     <dt>Locality</dt>
-    <!-- ko let: {addressPart: locality()} -->
     <dd data-bind="component: {
                                             name: addressPart.widgetLookup[addressPart.widget_id()].name,
                                             params: {
@@ -64,8 +65,8 @@
                                             }
                                         }, click: function(){console.log(card);}">
     </dd>
-    <!-- /ko -->
 </div>
+<!-- /ko -->
 <div>
     <dt>Location Description</dt>
     <!-- ko let: {addressPart: location_description()} -->
