--- a/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
@@ -50,6 +50,13 @@
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
+        <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) -->
+        <a data-bind="click: function () {
+            mapCard.showDetailsFromFilter(ko.unwrap(resourceinstanceid)); }" href="javascript:void(0)">
+            <i class="fa fa-info-circle"></i>
+            <span>Details</span>
+        </a>
+        <!--/ko-->
         <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
             window.open(reportURL + ko.unwrap(resourceinstanceid));
